Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19748

Hang while stopping Couchbase server with connected DCP client

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.1, 5.0.0
    • 4.5.0
    • memcached
    • None
    • Untriaged
    • Centos 64-bit
    • Unknown

    Description

      For this DCP test:
      ./testrunner -i ../ericsvms.ini -t dcp.crashtests.DCPCrashTests.test_crash_while_streamingreset

      I see hang while test runner stop the Couchbase server with the /etc/init.d/couchbase-server stop command.

      Note that:

      • this occurs on CentOS, not Windows
      • if I reduce the kvs from 10000 to 1000 the problem does not occur
      • if I set a break point before test runner stops the server and do a stop from the command line it will hang, but when I control/c out of pdb the hang does not hang anymore i.e. the stop completes successfully.

      Attachments

        Issue Links

          Activity

            People

              drigby Dave Rigby (Inactive)
              ericcooper Eric Cooper (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty