protocol/connection/client_greenstack_connection.h
@@ -84,6 +84,10 @@ public:
 
     Frame encodeCmdGet(const std::string& id, uint16_t vbucket) override;
 
+    Frame encodeCmdDcpOpen() override;
+
+    Frame encodeCmdDcpStreamReq() override;
+
     virtual MutationInfo mutate(const Document& doc, uint16_t vbucket,
                                 const Greenstack::mutation_type_t type) override;
 
